# eladmin-system/src/main/java/me/zhengjie/modules/system/swagger/model/BaseResponse.java
@@ -1,0 +1,92 @@
+package me.zhengjie.modules.system.swagger.model;
+
+import java.util.Objects;
+import com.fasterxml.jackson.annotation.JsonProperty;
+import com.fasterxml.jackson.annotation.JsonCreator;
+import io.swagger.v3.oas.annotations.media.Schema;
+import org.springframework.validation.annotation.Validated;
+import org.openapitools.jackson.nullable.JsonNullable;
+import io.swagger.configuration.NotUndefined;
+import com.fasterxml.jackson.annotation.JsonInclude;
+import com.fasterxml.jackson.annotation.JsonSetter;
+import com.fasterxml.jackson.annotation.Nulls;
+import javax.validation.Valid;
+import javax.validation.constraints.*;
+
+/**
+ * BaseResponse
+ */
+@Validated
+@NotUndefined
+@javax.annotation.Generated(value = "io.swagger.codegen.v3.generators.java.SpringCodegen", date = "2025-07-27T14:15:01.243014296Z[GMT]")
+
+
+public class BaseResponse   {
+  @JsonProperty("timestamp")
+
+  @JsonInclude(JsonInclude.Include.NON_ABSENT)  // Exclude from JSON if absent
+  @JsonSetter(nulls = Nulls.FAIL)    // FAIL setting if the value is null
+  private String timestamp = null;
+
+
+  public BaseResponse timestamp(String timestamp) { 
+
+    this.timestamp = timestamp;
+    return this;
+  }
+
+  /**
+   * Get timestamp
+   * @return timestamp
+   **/
+  
+  @Schema(example = "2017-07-21 17:32:28", description = "")
+  
+  public String getTimestamp() {  
+    return timestamp;
+  }
+
+
+
+  public void setTimestamp(String timestamp) { 
+    this.timestamp = timestamp;
+  }
+
+  @Override
+  public boolean equals(Object o) {
+    if (this == o) {
+      return true;
+    }
+    if (o == null || getClass() != o.getClass()) {
+      return false;
+    }
+    BaseResponse baseResponse = (BaseResponse) o;
+    return Objects.equals(this.timestamp, baseResponse.timestamp);
+  }
+
+  @Override
+  public int hashCode() {
+    return Objects.hash(timestamp);
+  }
+
+  @Override
+  public String toString() {
+    StringBuilder sb = new StringBuilder();
+    sb.append("class BaseResponse {\n");
+    
+    sb.append("    timestamp: ").append(toIndentedString(timestamp)).append("\n");
+    sb.append("}");
+    return sb.toString();
+  }
+
+  /**
+   * Convert the given object to string with each line indented by 4 spaces
+   * (except the first line).
+   */
+  private String toIndentedString(Object o) {
+    if (o == null) {
+      return "null";
+    }
+    return o.toString().replace("\n", "\n    ");
+  }
+}
